Api
endpoint para devolver los usuarios de un departamento dado su codigo
